# toy_takeoff_modeling

./: README.md  pyproject.toml  run_takeoff_model.py  takeoff_modeling.py
