[tool.poetry]
name = "toy_takeoff_modeling"
version = "0.1.0"
description = "v quick, hacky takeoff modeling"
authors = ["Eli Lifland <eli.d.lifland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
